--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "ethers": "^6.13.5",
     "express": "^4.21.2",
     "openai": "^4.90.0",
     "react": "^19.0.0",
@@ -22,6 +23,7 @@
     "react-scripts": "5.0.1",
     "viem": "^2.25.0",
     "web-vitals": "^2.1.4",
+    "web3": "^4.16.0",
     "zod": "^3.24.2"
   },
   "scripts": {
